--- a/src/main/resources/templates/UserRegistration.html
+++ b/src/main/resources/templates/UserRegistration.html
@@ -3,16 +3,78 @@
 <head>
     <title th:remove="all">User Registration</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-</head>
-<body>
-<p>Hello <b data-th-text="${name}">user</b></p>
+    <style>
+        body {
+            font-family: monospace, serif;
+            background-color: whitesmoke;
+            padding: 21px;
+        }
 
-<p>
-    You have been successfully registered
-</p>
-<p>
-    Regards, <br/>
-    <em>lease-a-car</em>
-</p>
+        table {
+            max-width: 900px;
+            margin: 0 auto;
+            background-color: whitesmoke;
+            border-radius: 9px;
+            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        }
+
+        .banner {
+            background-color: #07393C;
+            padding: 21px;
+            border-top-left-radius: 9px;
+            border-top-right-radius: 9px;
+        }
+
+        .banner > h1 {
+            color: white;
+            margin: 0;
+            font-size: 21px;
+        }
+
+        .email-content-container {
+            padding: 30px;
+        }
+
+        .email-content-container > p {
+            font-size: 16px;
+            color: #333333;
+        }
+
+        .footer {
+            background-color: #2C666E;
+            padding: 15px;
+            text-align: center;
+            font-size: 12px;
+            color: #777;
+            border-bottom-left-radius: 9px;
+            border-bottom-right-radius: 9px;
+        }
+    </style>
+</head>
+
+<body>
+<table>
+    <tr>
+        <td class="banner">
+            <h1>Come on in! I ain't gonna bite... probably.</h1>
+        </td>
+    </tr>
+    <tr>
+        <td class="email-content-container" style="padding: 30px;">
+            <p>
+                Hello <b data-th-text="${username}">user</b>, <br/> <br/>
+                You have been successfully registered at Lease-a-Car. <br/>
+                This is where the cars live! Get you one!<br/><br/>
+                Regards,<br/>
+                <em>The Lease-a-Car Team</em>
+            </p>
+        </td>
+    </tr>
+    <tr>
+        <td class="footer">
+            &copy; <b data-th-text="${year}">year</b> Lease-a-Car. All rights reserved.
+        </td>
+    </tr>
+</table>
 </body>
 </html>
